MOS-12112 : Updated ID Json and added CBEFF Files in Reg Packet
Former-commit-id: f1e2dcade0262c970dcfe1ad1b657253182a7868
Former-commit-id: 319ebace225426982c0e6bcb405ce24298e30c2c